<resources>
    <string name="app_name">UTU</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_login_incorrect">Wrong email or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="or">- or -</string>
    <string name="network_required">Access to the network is required to download data from UTU.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="idle">Idle</string>
    <string name="placeholder" translatable="false">Sample text</string>
    <string name="nav_refresh">Refresh</string>
    <string name="action_load_without_login">load without login</string>
    <string name="error_failed_to_connect">Failed to connect the server</string>
    <string name="try_again">Do you want to try again?</string>
    <string name="item_event">Event</string>
    <string name="item_task">Task</string>
    <string name="item_exam">Exam</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_price">Price</string>
    <string name="submit">submit</string>
    <string name="operation_new_x">New %s</string>
    <string name="operation_edit_x">%s edit</string>
    <string name="error_admin_required">Admin priviligies required</string>
    <string name="sclass_not_set">Class is not set</string>
    <string name="nav_edit">Edit</string>
    <string name="nav_delete">Delete</string>
    <string name="item_article">Article</string>
    <string name="prompt_published">Published</string>
    <string name="prompt_show_in_details_until">Show in details until</string>
    <string name="prompt_show_in_details">Show in details</string>
    <string name="not_published">not published</string>
    <string name="prompt_event_start">Event start</string>
    <string name="prompts_event_end">Event end</string>
    <string name="prompt_pay_date">Pay date</string>
    <string name="prompt_date">Date</string>
    <string name="choose_additional_infos">Choose infos you want to include</string>
    <string name="additional_infos">Additional URLs</string>
    <string name="none">none</string>
    <string name="operation_downloading_predata">fetching Utu for classes list</string>
    <string name="operation_logging_in">logging in</string>
    <string name="nav_open_web_version">Open web version</string>
    <string name="nav_summary">Summary</string>
    <string name="nav_events">Events</string>
    <string name="nav_timetables">Timetables</string>
    <string name="nav_rakings">Rakings</string>
    <string name="nav_articles">Articles</string>
    <string name="current_user">Current user</string>
    <string name="none_selected_class">none, selected class: %1$s</string>
    <string name="nav_timetable_select">Timetable select</string>
    <string name="planned_raking_list_title">%1$s - %2$d. round</string>
    <string name="nth_raking_round">%1$d. round</string>
    <string name="rekt_x_out_of">rekt %1$d out of %2$d</string>
    <string name="raking_rekt">REKT</string>
    <string name="signup_for_rekt">Signup for rekt</string>
    <string name="nav_kana">7:45</string>
    <string name="app_drawer_title">UTU for Android</string>
    <string name="app_drawer_subtitle">What exactly is supposed to be in here?</string>
    <string name="application_icon">Application icon</string>
    <string name="prompt_show_rekt">Show already rekt</string>
    <string name="operation_submitting_new_of_type_x">submitting new %1$s</string>
    <string name="operation_updating_x_of_type_x">updating %2$s %1$s</string>
    <string name="operation_deleting_x_of_type_x">deleting %2$s %1$s</string>
    <string name="operation_hiding_x_of_type">hiding %2$s %1$s</string>
    <string name="operation_revealing_x_of_type_x">revealing %2$s %1$s</string>
    <string name="operation_downloading_timetables">downloading timetables</string>
    <string name="operation_downloading_utu_data">downloading utu data</string>
    <string name="nav_next_week">Next week</string>
    <string name="nav_previous_week">Current week</string>
    <string name="welcome_x">Welcome %s</string>
    <string name="no_service_found">No boardcleaners found</string>
    <string name="and">and</string>
    <string name="operation_generic_loading">Loading...</string>
    <string name="nav_services">Services</string>
    <string name="last_updated_at_x">Last updated %s</string>
    <string name="nav_exams">Exams</string>
    <string name="nav_tasks">Tasks</string>
    <string name="nav_edit_mode">Edit mode</string>
    <string name="nav_done">Done</string>
    <string name="error_user_required">You need to login in order to perform this operation</string>
    <string name="error_internal_error">Internal error. Try updating to the latest version.</string>
    <string name="error_item_deleted">Item no longer exists. Try reloading the data.</string>
</resources>
