<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_as"
            android:title="@string/nav_summary" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_as"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_tes"
            android:icon="@drawable/ic_as"
            android:title="@string/nav_tes" />
        <item
            android:id="@+id/nav_timetables"
            android:icon="@drawable/ic_timetable"
            android:title="@string/nav_timetables" />
        <item
            android:id="@+id/nav_rakings"
            android:icon="@drawable/ic_rakings"
            android:title="@string/nav_rakings" />
        <item
            android:id="@+id/nav_articles"
            android:icon="@drawable/ic_articles"
            android:title="@string/nav_articles" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_services"
            android:title="@string/nav_services" />
    </group>

</menu>
