<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.farast.utu_apibased.create_update_activities.CUEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_title"
                android:inputType="textAutoComplete"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cu_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_description"
                android:inputType="textMultiLine"
                android:maxLines="10" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cu_published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_published" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cu_show_in_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.farast.utu_apibased.custom_views.date_select.SpinnerLikeDateSelect
                android:id="@+id/cu_show_in_details_until"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cu_show_in_details"
                android:enabled="false"
                app:labelText="@string/prompt_show_in_details_until" />
        </RelativeLayout>


        <com.farast.utu_apibased.custom_views.utu_spinner.UtuSpinner
            android:id="@+id/cu_sgroup_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:utuItemType="sgroup" />

        <com.farast.utu_apibased.custom_views.additional_infos_select.SpinnerLikeAdditionalInfoDialoger
            android:id="@+id/cu_additional_info_select"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/cu_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>