<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.farast.utu_apibased.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/main_fragment_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.farast.utu_apibased.MainActivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start">

            <include layout="@layout/current_operation" />
        </LinearLayout>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/new_action_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:visibility="gone"
            app:fab_addButtonColorNormal="@color/colorAccent"
            app:fab_addButtonColorPressed="@color/colorAccentPressed"
            app:fab_labelStyle="@style/menu_labels_style">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_new_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/colorAccentPressed"
                app:fab_icon="@drawable/ic_rakings"
                app:fab_title="@string/item_event" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_new_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/colorAccentPressed"
                app:fab_icon="@drawable/ic_rakings"
                app:fab_title="@string/item_task" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_new_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/colorAccentPressed"
                app:fab_icon="@drawable/ic_rakings"
                app:fab_title="@string/item_exam" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_new_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/colorAccentPressed"
                app:fab_icon="@drawable/ic_rakings"
                app:fab_title="@string/item_article" />
        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
